[package]
name = "streamflow"
version = "0.1.1"
homepage = "https://streamflow.finance"
description = "Solana program for streamflow.finance"
authors = ["StreamFlow Developers <hello@streamflow.finance>"]
repository = "https://github.com/streamflow-finance/streamflow-program"
readme = "README.md"
license = "AGPL-3.0-only"
edition = "2018"

[dependencies]
solana-program = "1.7.1"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.7.1"
solana-client = "1.7.1"
solana-sdk = "1.7.1"

[lib]
crate-type = ["cdylib", "lib"]
