[package]
name = "streamflow"
version = "0.2.0"
homepage = "https://streamflow.finance"
description = "Solana program for streamflow.finance"
authors = ["StreamFlow Developers <hello@streamflow.finance>"]
repository = "https://github.com/streamflow-finance/streamflow-program"
readme = "README.md"
license = "AGPL-3.0-only"
edition = "2018"

[dependencies]
bincode = "1.3.3"
solana-program = "1.7.14"
streamflow-timelock = "0.1.1"

[dev-dependencies]
solana-program-test = "1.7.14"
solana-client = "1.7.14"
solana-sdk = "1.7.14"

[lib]
crate-type = ["cdylib", "lib"]
